# churrasco.ai

./: .env.example  .gitignore  .replit  Dockerfile  README.md  app.py  package-lock.json  package.json  packages.txt  pwa_utils.py  pyproject.toml  railway.toml  replit.md  requirements.txt  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-1-O-Fluxo-da-Aplica-o-Simples-e-Direto-O-app-ter-apenas_1768868381825.txt  Pasted-Atue-como-um-Desenvolvedor-S-nior-Fullstack-Especialist_1768868359274.txt
