[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churrasco-ai"
version = "2.0.0"
description = "Organize seu churrasco sem burocracia com IA"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "streamlit>=1.30.0",
    "tenacity>=8.2.0",
    "qrcode[pil]>=7.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
